--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 10:29:00 AM</p>
+    <p class="lastupdate">09/03/2020 10:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">72.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">72.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">72.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">57.1&#176;F</td>
+        <td class="data">57.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.006 inHg (-0.022)</td>
+        <td class="data">30.006 inHg (-0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.6&#176;F</td>
+        <td class="data">73.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:27:06 AM">
-            71.7</span><br/>
+          <span title="10:33:46 AM">
+            72.4</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:27:06 AM" class="hival">
-            71.7</span>
+          <span title="10:33:46 AM" class="hival">
+            72.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:20:51 PM (Sunday)" class="hival">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          173
+          172
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:26:02 AM">
-            73.6</span><br/>
+          <span title="10:33:02 AM">
+            73.8</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">1 day, 19 hours, 42 minutes</td>
+      <td class="data">1 day, 19 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">1 day, 19 hours, 42 minutes</td>
+      <td class="data">1 day, 19 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
