--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 10:34:00 AM</p>
+    <p class="lastupdate">09/03/2020 10:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">73.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">73.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">73.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">57.7&#176;F</td>
+        <td class="data">57.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">60%</td>
+        <td class="data">58%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.006 inHg (-0.023)</td>
+        <td class="data">30.005 inHg (-0.026)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph E (90&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.8&#176;F</td>
+        <td class="data">73.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:33:46 AM">
-            72.4</span><br/>
+          <span title="10:38:42 AM">
+            73.2</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:33:46 AM" class="hival">
-            72.4</span>
+          <span title="10:38:42 AM" class="hival">
+            73.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:20:51 PM (Sunday)" class="hival">
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:25:44 AM">
+          <span title="10:34:58 AM">
             57.9</span><br/>
           <span title="01:27:25 AM">
             51.4</span>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:37:07 AM">
             93</span><br/>
-          <span title="10:26:54 AM">
-            60</span>
+          <span title="10:38:00 AM">
+            58</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          186
+          185
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:33:02 AM">
-            73.8</span><br/>
+          <span title="10:35:02 AM">
+            73.9</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">1 day, 19 hours, 47 minutes</td>
+      <td class="data">1 day, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">1 day, 19 hours, 47 minutes</td>
+      <td class="data">1 day, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
