--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 11:29:00 AM</p>
+    <p class="lastupdate">09/03/2020 11:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">80.7&#176;F</td>
+        <td class="data">81.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">81.0&#176;F</td>
+        <td class="data">81.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">80.7&#176;F</td>
+        <td class="data">81.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">58.0&#176;F</td>
+        <td class="data">58.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">46%</td>
+        <td class="data">47%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.992 inHg (-0.042)</td>
+        <td class="data">29.988 inHg (-0.042)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph N (0&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.7&#176;F</td>
+        <td class="data">75.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:27:54 AM">
-            80.7</span><br/>
+          <span title="11:33:34 AM">
+            81.1</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:27:54 AM" class="hival">
-            81.1</span>
+          <span title="11:33:34 AM" class="hival">
+            81.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:20:51 PM (Sunday)" class="hival">
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:18:42 AM">
+          <span title="11:33:34 AM">
             58.9</span><br/>
           <span title="01:27:25 AM">
             51.4</span>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:27:02 AM">
-            75.7</span><br/>
+          <span title="11:32:02 AM">
+            75.9</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">1 day, 20 hours, 42 minutes</td>
+      <td class="data">1 day, 20 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">1 day, 20 hours, 42 minutes</td>
+      <td class="data">1 day, 20 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
