--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 01:04:00 PM</p>
+    <p class="lastupdate">09/04/2020 01:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -153,8 +153,8 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">56.7<br/>
             <span class="timestamp">10:05:12 AM</span><br/>
-            45.0<br/>
-            <span class="timestamp">01:03:32 PM</span>
+            44.8<br/>
+            <span class="timestamp">01:06:36 PM</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">01:24:38 PM (Wednesday)</span><br/>
@@ -163,8 +163,8 @@
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">09/02/2020 01:24:38 PM</span><br/>
-            45.0<br/>
-            <span class="timestamp">09/04/2020 01:03:32 PM</span>
+            44.8<br/>
+            <span class="timestamp">09/04/2020 01:06:36 PM</span>
           </td>
           <td class="data new_row">70.2<br/>
             <span class="timestamp">08/14/2020 10:10:13 AM</span><br/>
@@ -211,8 +211,8 @@
           <td class="units"> inHg</td>
           <td class="data new_row">29.967<br/>
             <span class="timestamp">08:05:02 AM</span><br/>
-            29.891<br/>
-            <span class="timestamp">12:59:02 PM</span>
+            29.887<br/>
+            <span class="timestamp">01:04:02 PM</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09:40:02 AM (Wednesday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            8<br/>
-            343<br/>
-            <span class="timestamp">09:43:04 AM</span>
+            9<br/>
+            285<br/>
+            <span class="timestamp">01:04:42 PM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             1<br/>
-            9
+            7
           </td>
           <td class="data new_row">
             1<br/>
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            78.0<br/>
-            <span class="timestamp">11:32:02 AM</span><br/>
+            78.1<br/>
+            <span class="timestamp">01:07:02 PM</span><br/>
             68.0<br/>
             <span class="timestamp">06:35:01 AM</span>
           </td>
