--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 01:04:00 PM</p>
+    <p class="lastupdate">09/04/2020 01:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">95.4&#176;F</td>
+        <td class="data">95.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">95.4&#176;F</td>
+        <td class="data">95.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">95.4&#176;F</td>
+        <td class="data">95.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.1&#176;F</td>
+        <td class="data">44.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.891 inHg (-0.067)</td>
+        <td class="data">29.889 inHg (-0.069)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNW (338&#176;)</td>
+        <td class="data">4 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.9&#176;F</td>
+        <td class="data">78.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">44%</td>
+        <td class="data">43%</td>
       </tr>
     </tbody>
   </table>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="10:05:12 AM">
             56.7</span><br/>
-          <span title="01:03:32 PM">
-            45.0</span>
+          <span title="01:06:36 PM">
+            44.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:24:38 PM (Wednesday)">
@@ -249,8 +249,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/04/2020 01:03:32 PM">
-            45.0</span>
+          <span title="09/04/2020 01:06:36 PM">
+            44.8</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="12:59:02 PM">
-            29.891</span>
+          <span title="01:04:02 PM">
+            29.887</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="09:43:04 AM">
-            8</span><br/>
-          343
+          <span title="01:04:42 PM">
+            9</span><br/>
+          285
         </td>
         <td class="data new_row hilo_week">
           <span title="04:15:00 PM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          9
+          7
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:32:02 AM">
-            78.0</span><br/>
+          <span title="01:07:02 PM">
+            78.1</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 22 hours, 17 minutes</td>
+      <td class="data">2 days, 22 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 22 hours, 17 minutes</td>
+      <td class="data">2 days, 22 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
