--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 03:24:00 AM</p>
+    <p class="lastupdate">09/05/2020 03:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.6&#176;F</td>
+        <td class="data">51.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">58%</td>
+        <td class="data">59%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.922 inHg (-0.011)</td>
+        <td class="data">29.920 inHg (-0.008)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.0&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.3</span><br/>
-          <span title="03:22:39 AM">
-            65.8</span>
+          <span title="03:28:39 AM">
+            65.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:22:39 AM" class="loval">
-            65.8</span>
+          <span title="03:28:39 AM" class="loval">
+            65.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:18:21 AM">
-            58</span><br/>
+          <span title="03:26:01 AM">
+            59</span><br/>
           <span title="12:00:01 AM">
             42</span>
         </td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:23:01 AM">
             29.933</span><br/>
-          <span title="02:21:01 AM">
-            29.920</span>
+          <span title="03:24:01 AM">
+            29.919</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          8
+          7
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          191
+          192
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:01:01 AM">
             80.4</span><br/>
-          <span title="03:23:01 AM">
-            77.0</span>
+          <span title="03:26:01 AM">
+            76.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:03:02 PM (Thursday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 12 hours, 37 minutes</td>
+      <td class="data">3 days, 12 hours, 43 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 12 hours, 37 minutes</td>
+      <td class="data">3 days, 12 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
