--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 04:14:00 PM</p>
+    <p class="lastupdate">09/05/2020 04:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            86.5<br/>
-            <span class="timestamp">04:11:02 PM</span><br/>
+            86.6<br/>
+            <span class="timestamp">04:18:02 PM</span><br/>
             74.1<br/>
             <span class="timestamp">06:33:01 AM</span>
           </td>
@@ -398,8 +398,8 @@
           <td class="data new_row">
             44<br/>
             <span class="timestamp">05:33:01 AM</span><br/>
-            38<br/>
-            <span class="timestamp">12:00:01 AM</span>
+            37<br/>
+            <span class="timestamp">04:16:02 PM</span>
           </td>
           <td class="data new_row">
             63<br/>
