--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/06/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,15 +84,15 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">110.7<br/>
-            <span class="timestamp">03:12:38 PM</span><br/>
-            61.3<br/>
-            <span class="timestamp">06:57:03 AM</span>
+          <td class="data new_row">82.3<br/>
+            <span class="timestamp">12:00:21 AM</span><br/>
+            82.1<br/>
+            <span class="timestamp">12:02:45 AM</span>
           </td>
-          <td class="data new_row">110.7<br/>
-            <span class="timestamp">03:12:38 PM (Saturday)</span><br/>
-            49.7<br/>
-            <span class="timestamp">06:21:16 AM (Sunday)</span>
+          <td class="data new_row">82.3<br/>
+            <span class="timestamp">12:00:21 AM (Sunday)</span><br/>
+            82.1<br/>
+            <span class="timestamp">12:02:45 AM (Sunday)</span>
           </td>
           <td class="data new_row">110.7<br/>
             <span class="timestamp">09/05/2020 03:12:38 PM</span><br/>
@@ -113,11 +113,11 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">110.7<br/>
-            <span class="timestamp">03:12:38 PM</span>
+          <td class="data new_row">82.3<br/>
+            <span class="timestamp">12:00:21 AM</span>
           </td>
-          <td class="data new_row">110.7<br/>
-            <span class="timestamp">03:12:38 PM (Saturday)</span>
+          <td class="data new_row">82.3<br/>
+            <span class="timestamp">12:00:21 AM (Sunday)</span>
           </td>
           <td class="data new_row">110.7<br/>
             <span class="timestamp">09/05/2020 03:12:38 PM</span>
@@ -132,11 +132,11 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">61.3<br/>
-            <span class="timestamp">06:57:03 AM</span>
+          <td class="data new_row">82.1<br/>
+            <span class="timestamp">12:02:45 AM</span>
           </td>
-          <td class="data new_row">49.7<br/>
-            <span class="timestamp">06:21:16 AM (Sunday)</span>
+          <td class="data new_row">82.1<br/>
+            <span class="timestamp">12:02:45 AM (Sunday)</span>
           </td>
           <td class="data new_row">50.8<br/>
             <span class="timestamp">09/01/2020 06:47:50 AM</span>
@@ -151,15 +151,15 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">56.1<br/>
-            <span class="timestamp">10:28:34 AM</span><br/>
-            41.2<br/>
-            <span class="timestamp">05:20:32 PM</span>
+          <td class="data new_row">45.8<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            44.8<br/>
+            <span class="timestamp">12:02:45 AM</span>
           </td>
-          <td class="data new_row">59.6<br/>
-            <span class="timestamp">01:24:38 PM (Wednesday)</span><br/>
-            41.2<br/>
-            <span class="timestamp">05:20:32 PM (Saturday)</span>
+          <td class="data new_row">45.8<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            44.8<br/>
+            <span class="timestamp">12:02:45 AM (Sunday)</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">09/02/2020 01:24:38 PM</span><br/>
@@ -180,15 +180,15 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">67<br/>
-            <span class="timestamp">06:20:27 AM</span><br/>
-            11<br/>
-            <span class="timestamp">03:07:18 PM</span>
+          <td class="data new_row">28<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            27<br/>
+            <span class="timestamp">12:00:19 AM</span>
           </td>
-          <td class="data new_row">93<br/>
-            <span class="timestamp">06:37:07 AM (Thursday)</span><br/>
-            11<br/>
-            <span class="timestamp">03:07:18 PM (Saturday)</span>
+          <td class="data new_row">28<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            27<br/>
+            <span class="timestamp">12:00:19 AM (Sunday)</span>
           </td>
           <td class="data new_row">93<br/>
             <span class="timestamp">09/03/2020 06:37:07 AM</span><br/>
@@ -209,15 +209,15 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.969<br/>
-            <span class="timestamp">09:30:02 AM</span><br/>
-            29.833<br/>
-            <span class="timestamp">05:46:03 PM</span>
+          <td class="data new_row">29.914<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            29.911<br/>
+            <span class="timestamp">12:01:01 AM</span>
           </td>
-          <td class="data new_row">30.063<br/>
-            <span class="timestamp">09:40:02 AM (Wednesday)</span><br/>
-            29.748<br/>
-            <span class="timestamp">05:12:57 PM (Sunday)</span>
+          <td class="data new_row">29.914<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            29.911<br/>
+            <span class="timestamp">12:01:01 AM (Sunday)</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09/02/2020 09:40:02 AM</span><br/>
@@ -275,14 +275,14 @@
             &#176;
           </td>
           <td class="data new_row">
-            15<br/>
-            219<br/>
-            <span class="timestamp">04:34:30 PM</span>
+            1<br/>
+            286<br/>
+            <span class="timestamp">12:00:35 AM</span>
           </td>
           <td class="data new_row">
-            23<br/>
-            225<br/>
-            <span class="timestamp">04:15:00 PM (Monday)</span>
+            1<br/>
+            286<br/>
+            <span class="timestamp">12:00:35 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             22<br/>
@@ -304,9 +304,9 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            2</td>
+            0</td>
           <td class="data new_row">
-            2</td>
+            0</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,8 +317,8 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">3</td>
-          <td class="data new_row">4</td>
+          <td class="data new_row">0</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
           <td class="data new_row">6</td>
@@ -335,11 +335,11 @@
           </td>
           <td class="data new_row">
             0<br/>
-            285
+            292
           </td>
           <td class="data new_row">
             0<br/>
-            200
+            292
           </td>
           <td class="data new_row">
             1<br/>
@@ -361,16 +361,16 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            91.1<br/>
-            <span class="timestamp">06:47:03 PM</span><br/>
-            74.1<br/>
-            <span class="timestamp">06:33:01 AM</span>
+            85.2<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            85.1<br/>
+            <span class="timestamp">12:01:01 AM</span>
           </td>
           <td class="data new_row">
-            101.9<br/>
-            <span class="timestamp">04:03:02 PM (Thursday)</span><br/>
-            64.7<br/>
-            <span class="timestamp">07:17:56 AM (Sunday)</span>
+            85.2<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            85.1<br/>
+            <span class="timestamp">12:01:01 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             101.9<br/>
@@ -396,16 +396,16 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            44<br/>
-            <span class="timestamp">05:33:01 AM</span><br/>
-            29<br/>
-            <span class="timestamp">10:47:03 PM</span>
+            30<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            30<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
-            63<br/>
-            <span class="timestamp">07:10:02 AM (Wednesday)</span><br/>
-            27<br/>
-            <span class="timestamp">06:21:03 PM (Thursday)</span>
+            30<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            30<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             63<br/>
