--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/06/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.3&#176;F</td>
+        <td class="data">82.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.3&#176;F</td>
+        <td class="data">82.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.3&#176;F</td>
+        <td class="data">82.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.9&#176;F</td>
+        <td class="data">44.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">28%</td>
+        <td class="data">27%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.913 inHg (0.028)</td>
+        <td class="data">29.911 inHg (0.024)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.3&#176;F</td>
+        <td class="data">85.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:37:21 AM</td>
+          <td class="data">06:38:06 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:26:11 PM</td>
+          <td class="data">07:24:46 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,16 +153,16 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:12:38 PM">
-            110.7</span><br/>
-          <span title="06:57:03 AM">
-            61.3</span>
+          <span title="12:00:21 AM">
+            82.3</span><br/>
+          <span title="12:02:45 AM">
+            82.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:12:38 PM (Saturday)">
-            110.7</span><br/>
-          <span title="06:21:16 AM (Sunday)">
-            49.7</span>
+          <span title="12:00:21 AM (Sunday)">
+            82.3</span><br/>
+          <span title="12:02:45 AM (Sunday)">
+            82.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:12:38 PM" class="hival">
-            110.7</span>
+          <span title="12:00:21 AM" class="hival">
+            82.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:12:38 PM (Saturday)" class="hival">
-            110.7</span>
+          <span title="12:00:21 AM (Sunday)" class="hival">
+            82.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:57:03 AM" class="loval">
-            61.3</span>
+          <span title="12:02:45 AM" class="loval">
+            82.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:21:16 AM (Sunday)" class="loval">
-            49.7</span>
+          <span title="12:02:45 AM (Sunday)" class="loval">
+            82.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -235,16 +235,16 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:28:34 AM">
-            56.1</span><br/>
-          <span title="05:20:32 PM">
-            41.2</span>
+          <span title="12:00:01 AM">
+            45.8</span><br/>
+          <span title="12:02:45 AM">
+            44.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:24:38 PM (Wednesday)">
-            59.6</span><br/>
-          <span title="05:20:32 PM (Saturday)">
-            41.2</span>
+          <span title="12:00:01 AM (Sunday)">
+            45.8</span><br/>
+          <span title="12:02:45 AM (Sunday)">
+            44.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -269,16 +269,16 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:20:27 AM">
-            67</span><br/>
-          <span title="03:07:18 PM">
-            11</span>
+          <span title="12:00:01 AM">
+            28</span><br/>
+          <span title="12:00:19 AM">
+            27</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:37:07 AM (Thursday)">
-            93</span><br/>
-          <span title="03:07:18 PM (Saturday)">
-            11</span>
+          <span title="12:00:01 AM (Sunday)">
+            28</span><br/>
+          <span title="12:00:19 AM (Sunday)">
+            27</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -303,16 +303,16 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:30:02 AM">
-            29.969</span><br/>
-          <span title="05:46:03 PM">
-            29.833</span>
+          <span title="12:00:01 AM">
+            29.914</span><br/>
+          <span title="12:01:01 AM">
+            29.911</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:40:02 AM (Wednesday)">
-            30.063</span><br/>
-          <span title="05:12:57 PM (Sunday)">
-            29.748</span>
+          <span title="12:00:01 AM (Sunday)">
+            29.914</span><br/>
+          <span title="12:01:01 AM (Sunday)">
+            29.911</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:34:30 PM">
-            15</span><br/>
-          219
+          <span title="12:00:35 AM">
+            1</span><br/>
+          286
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:15:00 PM (Monday)">
-            23</span><br/>
-          225
+          <span title="12:00:35 AM (Sunday)">
+            1</span><br/>
+          286
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 01:02:40 PM">
@@ -407,9 +407,9 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          0</td>
         <td class="data new_row hilo_week">
-          2</td>
+          0</td>
         <td class="data new_row hilo_month">
           2</td>
         <td class="data new_row hilo_year">
@@ -421,9 +421,9 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          3</td>
+          0</td>
         <td class="data new_row hilo_week">
-          4</td>
+          0</td>
         <td class="data new_row hilo_month">
           3</td>
         <td class="data new_row hilo_year">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          285
+          292
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          200
+          292
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,16 +470,16 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:47:03 PM">
-            91.1</span><br/>
-          <span title="06:33:01 AM">
-            74.1</span>
+          <span title="12:00:01 AM">
+            85.2</span><br/>
+          <span title="12:01:01 AM">
+            85.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:03:02 PM (Thursday)">
-            101.9</span><br/>
-          <span title="07:17:56 AM (Sunday)">
-            64.7</span>
+          <span title="12:00:01 AM (Sunday)">
+            85.2</span><br/>
+          <span title="12:01:01 AM (Sunday)">
+            85.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -505,16 +505,16 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:33:01 AM">
-            44</span><br/>
-          <span title="10:47:03 PM">
-            29</span>
+          <span title="12:00:01 AM">
+            30</span><br/>
+          <span title="12:00:01 AM">
+            30</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:10:02 AM (Wednesday)">
-            63</span><br/>
-          <span title="06:21:03 PM (Thursday)">
-            27</span>
+          <span title="12:00:01 AM (Sunday)">
+            30</span><br/>
+          <span title="12:00:01 AM (Sunday)">
+            30</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 9 hours, 12 minutes</td>
+      <td class="data">4 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 9 hours, 12 minutes</td>
+      <td class="data">4 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
