--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/07/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">117.5<br/>
-            <span class="timestamp">04:04:42 PM</span><br/>
-            67.4<br/>
-            <span class="timestamp">07:04:11 AM</span>
+          <td class="data new_row">83.6<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            83.4<br/>
+            <span class="timestamp">12:03:03 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">117.5<br/>
-            <span class="timestamp">04:04:42 PM</span>
+          <td class="data new_row">83.6<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">67.4<br/>
-            <span class="timestamp">07:04:11 AM</span>
+          <td class="data new_row">83.4<br/>
+            <span class="timestamp">12:03:03 AM</span>
           </td>
           <td class="data new_row">67.4<br/>
             <span class="timestamp">07:04:11 AM (Sunday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">56.3<br/>
-            <span class="timestamp">11:23:52 AM</span><br/>
-            43.3<br/>
-            <span class="timestamp">04:59:20 PM</span>
+          <td class="data new_row">50.6<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            50.4<br/>
+            <span class="timestamp">12:03:03 AM</span>
           </td>
           <td class="data new_row">56.3<br/>
             <span class="timestamp">11:23:52 AM (Sunday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">49<br/>
-            <span class="timestamp">07:12:31 AM</span><br/>
-            9<br/>
-            <span class="timestamp">04:59:20 PM</span>
+          <td class="data new_row">32<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            32<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">49<br/>
             <span class="timestamp">07:12:31 AM (Sunday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.954<br/>
-            <span class="timestamp">09:59:02 AM</span><br/>
-            29.795<br/>
-            <span class="timestamp">06:43:03 PM</span>
+          <td class="data new_row">29.835<br/>
+            <span class="timestamp">12:01:01 AM</span><br/>
+            29.832<br/>
+            <span class="timestamp">12:00:06 AM</span>
           </td>
           <td class="data new_row">29.954<br/>
             <span class="timestamp">09:59:02 AM (Sunday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            11<br/>
-            13<br/>
-            <span class="timestamp">12:26:08 PM</span>
+            1<br/>
+            286<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             11<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            1</td>
+            0</td>
           <td class="data new_row">
             1</td>
           <td class="data new_row">
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">2</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">2</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            1<br/>
-            357
+            0<br/>
+            292
           </td>
           <td class="data new_row">
             1<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            91.8<br/>
-            <span class="timestamp">06:21:03 PM</span><br/>
-            77.5<br/>
-            <span class="timestamp">07:46:01 AM</span>
+            87.0<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            86.9<br/>
+            <span class="timestamp">12:03:01 AM</span>
           </td>
           <td class="data new_row">
             91.8<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            39<br/>
-            <span class="timestamp">08:27:02 AM</span><br/>
-            29<br/>
-            <span class="timestamp">12:51:01 AM</span>
+            31<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            31<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             39<br/>
