--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/07/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.7&#176;F</td>
+        <td class="data">83.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.7&#176;F</td>
+        <td class="data">83.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.7&#176;F</td>
+        <td class="data">83.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.7&#176;F</td>
+        <td class="data">50.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.0&#176;F</td>
+        <td class="data">86.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:38:06 AM</td>
+          <td class="data">06:38:51 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:24:46 PM</td>
+          <td class="data">07:23:20 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:04:42 PM">
-            117.5</span><br/>
-          <span title="07:04:11 AM">
-            67.4</span>
+          <span title="12:00:01 AM">
+            83.6</span><br/>
+          <span title="12:03:03 AM">
+            83.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:04:42 PM" class="hival">
-            117.5</span>
+          <span title="12:00:01 AM" class="hival">
+            83.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="07:04:11 AM" class="loval">
-            67.4</span>
+          <span title="12:03:03 AM" class="loval">
+            83.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:23:52 AM">
-            56.3</span><br/>
-          <span title="04:59:20 PM">
-            43.3</span>
+          <span title="12:00:01 AM">
+            50.6</span><br/>
+          <span title="12:03:03 AM">
+            50.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:52 AM (Sunday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:12:31 AM">
-            49</span><br/>
-          <span title="04:59:20 PM">
-            9</span>
+          <span title="12:00:01 AM">
+            32</span><br/>
+          <span title="12:00:01 AM">
+            32</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:59:02 AM">
-            29.954</span><br/>
-          <span title="06:43:03 PM">
-            29.795</span>
+          <span title="12:01:01 AM">
+            29.835</span><br/>
+          <span title="12:00:06 AM">
+            29.832</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:26:08 PM">
-            11</span><br/>
-          13
+          <span title="12:00:01 AM">
+            1</span><br/>
+          286
         </td>
         <td class="data new_row hilo_week">
           <span title="12:26:08 PM (Sunday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          1</td>
+          0</td>
         <td class="data new_row hilo_week">
           1</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          2</td>
+          0</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
-          357
+          0<br/>
+          292
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:21:03 PM">
-            91.8</span><br/>
-          <span title="07:46:01 AM">
-            77.5</span>
+          <span title="12:00:01 AM">
+            87.0</span><br/>
+          <span title="12:03:01 AM">
+            86.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="08:27:02 AM">
-            39</span><br/>
-          <span title="12:51:01 AM">
-            29</span>
+          <span title="12:00:01 AM">
+            31</span><br/>
+          <span title="12:00:01 AM">
+            31</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:27:02 AM (Sunday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">81%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 9 hours, 12 minutes</td>
+      <td class="data">5 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 9 hours, 12 minutes</td>
+      <td class="data">5 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
