--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 02:39:00 AM</p>
+    <p class="lastupdate">09/08/2020 02:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -86,8 +86,8 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">82.7<br/>
             <span class="timestamp">12:00:01 AM</span><br/>
-            73.7<br/>
-            <span class="timestamp">02:38:27 AM</span>
+            73.3<br/>
+            <span class="timestamp">02:43:45 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span><br/>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">73.7<br/>
-            <span class="timestamp">02:38:27 AM</span>
+          <td class="data new_row">73.3<br/>
+            <span class="timestamp">02:43:45 AM</span>
           </td>
           <td class="data new_row">67.4<br/>
             <span class="timestamp">07:04:11 AM (Sunday)</span>
@@ -211,28 +211,28 @@
           <td class="units"> inHg</td>
           <td class="data new_row">29.650<br/>
             <span class="timestamp">12:02:01 AM</span><br/>
-            29.625<br/>
-            <span class="timestamp">02:31:01 AM</span>
+            29.622<br/>
+            <span class="timestamp">02:42:01 AM</span>
           </td>
           <td class="data new_row">29.954<br/>
             <span class="timestamp">09:59:02 AM (Sunday)</span><br/>
-            29.625<br/>
-            <span class="timestamp">07:00:03 PM (Monday)</span>
+            29.622<br/>
+            <span class="timestamp">02:42:01 AM (Tuesday)</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09/02/2020 09:40:02 AM</span><br/>
-            29.625<br/>
-            <span class="timestamp">09/07/2020 07:00:03 PM</span>
+            29.622<br/>
+            <span class="timestamp">09/08/2020 02:42:01 AM</span>
           </td>
           <td class="data new_row">30.065<br/>
             <span class="timestamp">07/04/2020 08:07:00 AM</span><br/>
-            29.625<br/>
-            <span class="timestamp">09/07/2020 07:00:03 PM</span>
+            29.622<br/>
+            <span class="timestamp">09/08/2020 02:42:01 AM</span>
           </td>
           <td class="data new_row">30.065<br/>
             <span class="timestamp">07/04/2020 08:07:00 AM</span><br/>
-            29.625<br/>
-            <span class="timestamp">09/07/2020 07:00:03 PM</span>
+            29.622<br/>
+            <span class="timestamp">09/08/2020 02:42:01 AM</span>
           </td>
         </tr>
         <tr>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            214
+            216
           </td>
           <td class="data new_row">
             1<br/>
@@ -363,8 +363,8 @@
           <td class="data new_row">
             87.2<br/>
             <span class="timestamp">12:00:01 AM</span><br/>
-            83.3<br/>
-            <span class="timestamp">02:36:01 AM</span>
+            83.1<br/>
+            <span class="timestamp">02:42:01 AM</span>
           </td>
           <td class="data new_row">
             91.8<br/>
