--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 02:39:00 AM</p>
+    <p class="lastupdate">09/08/2020 02:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">73.7&#176;F</td>
+        <td class="data">73.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">73.7&#176;F</td>
+        <td class="data">73.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">73.7&#176;F</td>
+        <td class="data">73.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.5&#176;F</td>
+        <td class="data">48.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.625 inHg (-0.029)</td>
+        <td class="data">29.624 inHg (-0.031)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.3&#176;F</td>
+        <td class="data">83.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="02:38:27 AM">
-            73.7</span>
+          <span title="02:43:45 AM">
+            73.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="02:38:27 AM" class="loval">
-            73.7</span>
+          <span title="02:43:45 AM" class="loval">
+            73.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:02:01 AM">
             29.650</span><br/>
-          <span title="02:31:01 AM">
-            29.625</span>
+          <span title="02:42:01 AM">
+            29.622</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="07:00:03 PM (Monday)">
-            29.625</span>
+          <span title="02:42:01 AM (Tuesday)">
+            29.622</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 07:00:03 PM">
-            29.625</span>
+          <span title="09/08/2020 02:42:01 AM">
+            29.622</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 07:00:03 PM">
-            29.625</span>
+          <span title="09/08/2020 02:42:01 AM">
+            29.622</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 07:00:03 PM">
-            29.625</span>
+          <span title="09/08/2020 02:42:01 AM">
+            29.622</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          214
+          216
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="02:36:01 AM">
-            83.3</span>
+          <span title="02:42:01 AM">
+            83.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 11 hours, 52 minutes</td>
+      <td class="data">6 days, 11 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 11 hours, 52 minutes</td>
+      <td class="data">6 days, 11 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
